--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
             background-color: #f5f5f5;
-            min-height: 100vh;
+            height: 100vh;
             display: flex;
             flex-direction: column;
+            overflow: hidden;
         }
 
         header {
@@ -65,17 +66,23 @@
         }
 
         main {
-            flex: 1;
+            position: fixed;
+            top: 70px;
+            left: 0;
+            right: 0;
+            bottom: calc(100px + 180px);
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center;
+            overflow-y: auto;
             padding: 40px 20px;
+            box-sizing: border-box;
         }
 
         .welcome-section {
             text-align: center;
             margin-bottom: 48px;
+            margin-top: auto;
         }
 
         .welcome-section.hidden {
@@ -97,10 +104,10 @@
         .chat-messages {
             width: 100%;
             max-width: 760px;
-            margin-bottom: 24px;
             display: flex;
             flex-direction: column;
             gap: 16px;
+            padding-bottom: 20px;
         }
 
         .message {
@@ -153,13 +160,18 @@
         }
 
         .input-container {
-            width: 100%;
+            position: fixed;
+            bottom: 100px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: calc(100% - 40px);
             max-width: 760px;
             background: white;
             border: 1px solid #e0e0e0;
             border-radius: 24px;
             padding: 20px 24px;
             box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
+            z-index: 100;
         }
 
         .input-wrapper {
@@ -628,50 +640,50 @@
         </div>
 
         <div class="chat-messages" id="chatMessages"></div>
+    </main>
 
-        <div class="input-container">
-            <div class="input-wrapper">
-                <input
-                    type="text"
-                    class="input-field"
-                    id="messageInput"
-                    placeholder="Type your message..."
-                    autocomplete="off"
-                />
-                <button class="send-button" id="sendBtn">
-                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                        <path d="M12 19V5M5 12l7-7 7 7"/>
-                    </svg>
+    <div class="input-container">
+        <div class="input-wrapper">
+            <input
+                type="text"
+                class="input-field"
+                id="messageInput"
+                placeholder="Type your message..."
+                autocomplete="off"
+            />
+            <button class="send-button" id="sendBtn">
+                <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M12 19V5M5 12l7-7 7 7"/>
+                </svg>
+            </button>
+        </div>
+        <div class="bottom-bar">
+            <div class="bottom-bar-left">
+                <button class="plus-button" id="plusBtn" title="Upload image">
+                    +
+                    <input type="file" id="imageInput" accept="image/*" />
                 </button>
-            </div>
-            <div class="bottom-bar">
-                <div class="bottom-bar-left">
-                    <button class="plus-button" id="plusBtn" title="Upload image">
-                        +
-                        <input type="file" id="imageInput" accept="image/*" />
-                    </button>
-                    <div class="model-selector" id="modelSelector">
-                        <span id="modelTag">Loading...</span>
-                        <div class="models-dropdown" id="modelsDropdown"></div>
-                    </div>
-                </div>
-                <div class="bottom-bar-right">
-                    <div class="agents-selector" id="agentsSelector">
-                        <span>agents</span>
-                        <div class="agents-dropdown" id="agentsDropdown"></div>
-                    </div>
+                <div class="model-selector" id="modelSelector">
+                    <span id="modelTag">Loading...</span>
+                    <div class="models-dropdown" id="modelsDropdown"></div>
                 </div>
             </div>
-            <div class="image-preview" id="imagePreview">
-                <img id="previewImg" src="" alt="Preview" />
-                <div class="image-preview-info">
-                    <div id="imageName"></div>
-                    <div id="imageSize"></div>
+            <div class="bottom-bar-right">
+                <div class="agents-selector" id="agentsSelector">
+                    <span>agents</span>
+                    <div class="agents-dropdown" id="agentsDropdown"></div>
                 </div>
-                <button class="image-preview-remove" id="removeImage">Remove</button>
             </div>
         </div>
-    </main>
+        <div class="image-preview" id="imagePreview">
+            <img id="previewImg" src="" alt="Preview" />
+            <div class="image-preview-info">
+                <div id="imageName"></div>
+                <div id="imageSize"></div>
+            </div>
+            <button class="image-preview-remove" id="removeImage">Remove</button>
+        </div>
+    </div>
 
     <!-- API Key Modal -->
     <div class="modal" id="apiModal">
