--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
+            -webkit-tap-highlight-color: transparent;
+        }
+        
+        input, textarea {
+            -webkit-user-select: text !important;
+            -moz-user-select: text !important;
+            -ms-user-select: text !important;
+            user-select: text !important;
         }
 
         body {
@@ -184,6 +192,8 @@
             align-items: center;
             gap: 12px;
             margin-bottom: 16px;
+            -webkit-user-select: none;
+            user-select: none;
         }
 
         .input-field {
@@ -193,6 +203,17 @@
             font-size: 16px;
             color: #333;
             background: transparent;
+            resize: none;
+            font-family: inherit;
+            line-height: 1.5;
+            max-height: 200px;
+            overflow-y: auto;
+            -webkit-user-select: text !important;
+            -moz-user-select: text !important;
+            -ms-user-select: text !important;
+            user-select: text !important;
+            -webkit-touch-callout: default;
+            touch-action: pan-y;
         }
 
         .input-field::placeholder {
@@ -203,7 +224,7 @@
             width: 36px;
             height: 36px;
             border-radius: 50%;
-            background: #999;
+            background: #CAF702;
             border: none;
             cursor: pointer;
             display: flex;
@@ -214,7 +235,7 @@
         }
 
         .send-button:hover {
-            background: #777;
+            background: #b8e002;
         }
 
         .send-button:disabled {
@@ -536,16 +557,22 @@
             background: #f8f8f8;
             border-radius: 8px;
             margin-bottom: 8px;
+            gap: 8px;
         }
 
         .prompt-item-info {
             flex: 1;
+            min-width: 0;
+            overflow: hidden;
         }
 
         .prompt-item-name {
             font-weight: 500;
             color: #000;
             margin-bottom: 4px;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
         }
 
         .prompt-item-preview {
@@ -559,15 +586,17 @@
         .prompt-item-actions {
             display: flex;
             gap: 8px;
+            flex-shrink: 0;
         }
 
         .prompt-item-btn {
-            padding: 4px 8px;
+            padding: 6px 12px;
             border: none;
             border-radius: 4px;
             font-size: 12px;
             cursor: pointer;
             transition: opacity 0.2s;
+            white-space: nowrap;
         }
 
         .prompt-item-btn:hover {
@@ -674,6 +703,11 @@
 
             .input-field {
                 font-size: 16px;
+                min-height: 56px;
+            }
+
+            .input-wrapper {
+                align-items: flex-end;
             }
 
             .message {
@@ -688,6 +722,23 @@
 
             .prompts-modal-content {
                 max-height: 70vh;
+            }
+
+            .prompt-item {
+                padding: 10px;
+            }
+
+            .prompt-item-preview {
+                display: none;
+            }
+
+            .prompt-item-name {
+                margin-bottom: 0;
+            }
+
+            .prompt-item-btn {
+                padding: 8px 16px;
+                font-size: 13px;
             }
 
             .bottom-bar {
@@ -749,6 +800,10 @@
                 padding: 12px 15px;
             }
 
+            .input-field {
+                min-height: 64px;
+            }
+
             .send-button {
                 width: 32px;
                 height: 32px;
@@ -770,6 +825,23 @@
 
             .modal-title {
                 font-size: 18px;
+            }
+
+            .prompt-item {
+                padding: 8px;
+            }
+
+            .prompt-item-preview {
+                display: none;
+            }
+
+            .prompt-item-btn {
+                padding: 6px 12px;
+                font-size: 12px;
+            }
+
+            .prompts-list {
+                max-height: 150px;
             }
 
             .bottom-bar {
@@ -835,13 +907,13 @@
 
     <div class="input-container">
         <div class="input-wrapper">
-            <input
-                type="text"
+            <textarea
                 class="input-field"
                 id="messageInput"
                 placeholder="Type your message..."
                 autocomplete="off"
-            />
+                rows="1"
+            ></textarea>
             <button class="send-button" id="sendBtn">
                 <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                     <path d="M12 19V5M5 12l7-7 7 7"/>
@@ -879,12 +951,8 @@
     <!-- API Key Modal -->
     <div class="modal" id="apiModal">
         <div class="modal-content">
-            <div class="modal-title">Groq API Key</div>
-            <div class="modal-description">
-                Enter your Groq API key to access AI models. Get your free API key at 
-                <a href="https://console.groq.com" target="_blank" style="color: #007aff;">console.groq.com</a>
-            </div>
-            <input type="password" class="modal-input" id="apiKeyInput" placeholder="gsk_..." />
+            <div class="modal-title">API Key</div>
+            <input type="text" class="modal-input" id="apiKeyInput" placeholder="gsk_..." />
             <div class="modal-buttons">
                 <button class="modal-btn modal-btn-cancel" id="cancelBtn">Cancel</button>
                 <button class="modal-btn modal-btn-save" id="saveBtn">Save</button>
@@ -1042,8 +1110,16 @@
 
         userIcon.onclick = function() {
             modal.classList.add('show');
-            apiKeyInput.value = apiKey;
-            apiKeyInput.focus();
+            // Show only last 4 digits if API key exists
+            if (apiKey && apiKey.length > 4) {
+                apiKeyInput.value = '...' + apiKey.slice(-4);
+                apiKeyInput.dataset.truncated = 'true';
+            } else {
+                apiKeyInput.value = apiKey;
+                apiKeyInput.dataset.truncated = 'false';
+            }
+            // Don't auto-focus to prevent clearing the truncated value
+            setTimeout(() => apiKeyInput.select(), 100);
         };
 
         cancelBtn.onclick = function() {
@@ -1052,17 +1128,28 @@
 
         saveBtn.onclick = function() {
             const newKey = apiKeyInput.value.trim();
-            if (newKey) {
+            // Don't save if it's the truncated display value
+            if (newKey && newKey !== '...' + apiKey.slice(-4)) {
                 apiKey = newKey;
                 localStorage.setItem('groqApiKey', apiKey);
                 modal.classList.remove('show');
                 loadModels();
+            } else if (apiKeyInput.dataset.truncated === 'true') {
+                // User didn't change the key, just close modal
+                modal.classList.remove('show');
             }
         };
 
         modal.onclick = function(e) {
             if (e.target === modal) {
                 modal.classList.remove('show');
+            }
+        };
+
+        // Clear truncated value when user starts typing
+        apiKeyInput.oninput = function() {
+            if (apiKeyInput.dataset.truncated === 'true') {
+                apiKeyInput.dataset.truncated = 'false';
             }
         };
 
@@ -1679,11 +1766,15 @@
         // Event listeners
         sendBtn.onclick = sendMessage;
 
-        messageInput.onkeypress = function(event) {
-            if (event.key === 'Enter' && !event.shiftKey) {
-                event.preventDefault();
-                sendMessage();
-            }
+        // Auto-resize textarea as user types
+        messageInput.oninput = function() {
+            this.style.height = 'auto';
+            this.style.height = Math.min(this.scrollHeight, 200) + 'px';
+        };
+
+        // Enter key no longer submits - only the send button does
+        messageInput.onkeydown = function(event) {
+            // Allow Enter key for new lines (no special handling needed)
         };
 
         // Initialize on load
