Add Groq rate limits link to API Key modal

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <!-- API Key Modal -->
     <div class="modal" id="apiModal">
         <div class="modal-content">
-            <div class="modal-title">API Key</div>
+            <div class="modal-title" style="font-size: 0.85em;">API Key <a href="https://console.groq.com/docs/rate-limits" target="_blank" rel="noopener noreferrer" style="color: red;">by Groq</a></div>
             <input type="text" class="modal-input" id="apiKeyInput" placeholder="gsk_..." />
             <div class="modal-buttons">
                 <button class="modal-btn modal-btn-cancel" id="cancelBtn">Cancel</button>
