Fix responsive layout issues and UI improvements
- Fix input container overflow on mobile browsers
- Update prompts modal button labels (Update/Save)
- Adjust button sizing to fit within modal width on mobile
- Increase welcome text size on mobile (75% width)
- Reposition api-status to align with input box right edge

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <textarea class="modal-textarea" id="promptText" placeholder="System prompt instructions..." rows="6"></textarea>
                 <div class="modal-buttons">
                     <button class="modal-btn modal-btn-save" id="addPromptBtn">Add</button>
-                    <button class="modal-btn modal-btn-secondary" id="savePromptsBtn">Save All</button>
+                    <button class="modal-btn modal-btn-secondary" id="savePromptsBtn">Save</button>
                     <button class="modal-btn modal-btn-secondary" id="loadPromptsBtn">Load</button>
                     <button class="modal-btn modal-btn-cancel" id="closePromptsBtn">Close</button>
                 </div>
