Reorganize 02: Move to js/css folders, fix multi-price extraction, increase max_tokens to 1024

--- a/02/index.html
+++ b/02/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dingo 3</title>
+    <title>Dingo 3 - Version 02 (JS Currency Conversion)</title>
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
-    <link rel="stylesheet" href="src/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
@@ -32,7 +32,7 @@
     <main>
         <div class="welcome-section" id="welcomeSection">
             <h1>Dingo 3</h1>
-            <p class="subtitle">Better than Gemini 3</p>
+            <p class="subtitle">Version 02 - JS Currency Conversion</p>
         </div>
 
         <div class="chat-messages" id="chatMessages"></div>
@@ -114,7 +114,8 @@
     <!-- API Status Indicator -->
     <div class="api-status" id="apiStatus">No API key</div>
     
-    <script src="src/promptSaver.js"></script>
-    <script src="src/app.js"></script>
+    <script src="js/promptSaver.js"></script>
+    <script src="js/currencyConverter.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
