feat: add soft model preference for agents
- Agents can now specify a preferred LLM model
- Auto-switches to preferred model when agent is selected
- Visual hints show model association in agent dropdown
- Added model selector in prompts modal UI
- Maintains manual override capability (soft preference)
- Updated agent_prompts.json with preferred models
- Documented feature in README

--- a/02/index.html
+++ b/02/index.html
@@ -101,6 +101,9 @@
             <div class="prompt-form">
                 <input type="text" class="modal-input" id="promptName" placeholder="Agent name (e.g., Code Helper)" />
                 <textarea class="modal-textarea" id="promptText" placeholder="System prompt instructions..." rows="6"></textarea>
+                <select class="modal-select" id="promptModel">
+                    <option value="">No preferred model (manual selection)</option>
+                </select>
                 <div class="modal-buttons">
                     <button class="modal-btn modal-btn-save" id="addPromptBtn">Add</button>
                     <button class="modal-btn modal-btn-secondary" id="savePromptsBtn">Save</button>
