Update welcome message in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dingo 3 - Version 02 (JS Currency Conversion)</title>
+    <title>Dingo 3</title>
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -32,7 +32,7 @@
     <main>
         <div class="welcome-section" id="welcomeSection">
             <h1>Dingo 3</h1>
-            <p class="subtitle">Version 02 - JS Currency Conversion</p>
+            <p class="subtitle">Better than Gemini 3</p>
         </div>
 
         <div class="chat-messages" id="chatMessages"></div>
