Add version display (v3.1) to api-status with centralized version management

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
+<body data-version="3.2"></body>
     <header>
         <div class="logo"></div>
         <div class="header-icons">
