--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>Dingo 3</title>
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/copy-button.css">
 </head>
-<body data-version="3.3"></body>
+<body data-version="3.5"></body>
     <header>
         <div class="logo"></div>
         <div class="header-icons">
@@ -119,6 +120,7 @@
     
     <script src="js/promptSaver.js"></script>
     <script src="js/currencyConverter.js"></script>
+    <script src="js/copyButton.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
