--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/copy-button.css">
 </head>
-<body data-version="3.5"></body>
+<body data-version="3.7">
     <header>
         <div class="logo"></div>
         <div class="header-icons">
