--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/copy-button.css">
 </head>
-<body data-version="3.9.2">
+<body data-version="4.0">
     <header>
         <div class="logo"></div>
         <div class="header-icons">
@@ -57,7 +57,9 @@
         <div class="bottom-bar">
             <div class="bottom-bar-left">
                 <button class="plus-button" id="plusBtn" title="Upload image">
-                    +
+                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <path d="M12 5v14M5 12h14"/>
+                    </svg>
                     <input type="file" id="imageInput" accept="image/*" />
                 </button>
                 <div class="model-selector" id="modelSelector">
